# ros-repo-3

./: .gitignore  README.md  USER_MANUAL.md  USER_MANUAL_KR.md  docker-compose.yml  requirements.txt  ros2_system_manager.py  setup_environment.sh  ssh_key_manager.py  test_process_manager.py
malle_ai_service/: Dockerfile  main.py  requirements.txt  run.py  test_evasion_example.py  visualization.py
malle_ai_service/app/: __init__.py
malle_ai_service/app/routes/: voice.py
malle_ai_service/app/services/: intent_parser.py
malle_bot/: .gitignore  Dockerfile  keepout_mask.pgm  keepout_mask.yaml  map_end_end.pgm  map_end_end.yaml  mock_bridge.py  nav_node.py  nav_test_ui.py  requirements.txt
malle_bot/src/malle_controller/: CMakeLists.txt  bridge_node.py  package.xml  setup.cfg  setup.py
malle_bot/src/malle_controller/config/: apriltag_poses.yaml  waypoint_graph.yaml
malle_bot/src/malle_controller/config/fallback/: pois.yaml  zones.yaml
malle_bot/src/malle_controller/launch/: bridge.launch.xml  bringup.launch.py  malle.launch.xml
malle_bot/src/malle_controller/malle_controller/: api_client.py  apriltag_pose_corrector.py  battery_monitor.py  bridge_node.py  cam_node.py  image_sender.py  libcamera-vid-wrapper.sh  lockbox_controller.py  malle_linetrack.py  malle_parking.py  malle_tdrive.py  mission_errand.py  mission_executor.py  mission_follow.py  mission_guide.py  mission_parking.py  mission_parking11.py  nav_core.py  pc_inference.py  pc_yolo_node.py  pid_edges.py  poi_manager.py  repaircenter_linetracking.py  run_malle.py  tag_tracker.py  test_publisher.py  test_subscriber.py  topic_relay.py  vision_pub.py  zone_manager.py
malle_bot/src/malle_controller/msg/: MessageHeader.msg  RobotMessage.msg  TaskCommand.msg
malle_bot/src/malle_controller/test/: verify_comms.py
malle_service/: config.py  main.py  requirements.txt  run.py
malle_service/app/: config.py  database.py  main.py
malle_service/app/models/: __init__.py  charger.py  congestion.py  enums.py  event.py  guide.py  lockbox.py  mission.py  pickup.py  poi.py  product.py  robot.py  session.py  shopping.py  store.py  user.py  zone.py
malle_service/app/routers/: camera.py  events.py  guide.py  lockbox.py  missions.py  pickup.py  pois.py  robots.py  sessions.py  shopping.py  stores.py  teleop.py  zones.py
malle_service/app/schemas/: robot.py  session.py
malle_service/app/services/: __init__.py  guide_service.py  robot_dispatcher.py  robot_state_update.py  route_optimizer.py  session_workflow.py  time_estimator.py
malle_service/app/utils/: bridge.py  latency_log.py
malle_service/app/ws/: events.py  handlers.py  manager.py
malle_service/exception/: __init__.py  server_run.py
malle_service/models/: __init__.py  enums.py  robot.py  session.py
malle_service/schemas/: __init__.py  robot.py
malle_service/scripts/: seed.py
malle_service/services/: robot_dispatcher.py  time_estimator.py
malle_service/tests/: base.py  run_all.py  test_dispatcher.py  test_guide.py  test_lockbox.py  test_pickup.py  test_pois_stores.py  test_robots.py  test_sessions.py  test_zones_events.py
malle_service/workflows/: session_workflow.py
malle_web_service/: Dockerfile
malle_web_service/service/: .gitignore  main.py  run.py
malle_web_service/ui/admin/: index.html  package-lock.json  tailwind.config.ts  vite.config.ts
malle_web_service/ui/admin/src/: App.js  App.tsx  index.css
malle_web_service/ui/admin/src/api/: services.ts
malle_web_service/ui/admin/src/components/: AppSidebar.tsx  DashboardLayout.tsx  EmergencyBanner.tsx  MaterialIcon.tsx  PageHeader.tsx
malle_web_service/ui/admin/src/context/: DashboardContext.tsx
malle_web_service/ui/admin/src/data/: waypoints.ts
malle_web_service/ui/admin/src/pages/: Analytics.tsx  CameraPage.tsx  Events.tsx  FleetMap.tsx  ManualControl.tsx  Missions.tsx  Overview.tsx  Zones.tsx
malle_web_service/ui/admin/src/ws/: useWebSocket.ts  useWsHandler.ts
malle_web_service/ui/mobile/: index.html  tailwind.config.ts  vite.config.ts
malle_web_service/ui/mobile/src/: App.tsx  index.css
malle_web_service/ui/mobile/src/api/: services.ts  sessions.ts
malle_web_service/ui/mobile/src/components/home/: ActiveSessionCard.tsx  (+9 more)
malle_web_service/ui/mobile/src/data/: storeProducts.ts
malle_web_service/ui/mobile/src/lib/: voiceParser.ts
malle_web_service/ui/mobile/src/pages/: FollowMode.tsx  GuideActive.tsx  GuideMode.tsx  Home.tsx  Lockbox.tsx  MapPage.tsx  Mode.tsx  PickupMode.tsx  ShoppingList.tsx  TaskComplete.tsx
malle_web_service/ui/mobile/src/store/: appStore.ts
malle_web_service/ui/mobile/src/ws/: useWebSocket.ts  useWsHandler.ts
malle_web_service/ui/robot/: .gitignore  index.html  tailwind.config.ts  vite.config.ts
malle_web_service/ui/robot/src/: App.tsx  index.css
malle_web_service/ui/robot/src/api/: client.ts  guide.ts  services.ts
malle_web_service/ui/robot/src/data/: stores.ts
malle_web_service/ui/robot/src/lib/: voiceParser.ts
malle_web_service/ui/robot/src/pages/: FollowPage.tsx  GuidePage.tsx  HomePage.tsx  LockboxPage.tsx  MapPage.tsx  ModePage.tsx  PickupPage.tsx  SearchPage.tsx
malle_web_service/ui/robot/src/stores/: robotStore.ts
malle_web_service/ui/robot/src/types/: robot.ts
malle_web_service/ui/robot/src/ws/: useWebSocket.ts  useWsHandler.ts
test/: latency_benchmark.py  log_latency.py  test_occupied_mutex.py  timing_analyzer.py
test/Follow/: cam_following12.py  malle_follow_test_v01.py  malle_follow_test_v02.py
test/T-drive/: t_curve1.py  t_curve2.py  t_curve3.py  t_curve4.py  t_curve5.py
test/burial/: 8_Seconds.py  ABC_Mart.py  Barbie.py  Charger_1_ap.py  Charger_2_ap.py  Charger_3_ap.py  Charger_4_ap.py  Charger_5_ap.py  Dior.py  Fountain.py  Hi_Mart.py  IKEA.py  Lounge.py  Maintenance.py  Maintenance_ap.py  North_Face.py  Olive_Young.py  Pop-up.py  Starbucks.py  Starbucks_ap.py  Tiffany.py  Top10.py  Vendor.py
test/store_park/: package.xml  setup.cfg  setup.py
test/store_park/configs/: stores.json
test/store_park/store_park/: __init__.py  main_park.py  parking.py
test/tracking/: line_find.py  line_tracking.py
(+15 files in other folders)
